<resources>
    <string name="app_name">Layout Basics</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="country">Country</string>
    <string name="apply">Apply</string>
    <string name="textview">textView</string>
    <string name="edittext">EditText</string>
    <string name="imageview">ImageView</string>
    <string name="toast">Toast</string>
</resources>